@@ -2,6 +2,7 @@
 
 	* Removed ereg_* functions (deprecated in PHP 5.3)
 	* Small fixes in the redirect module
+	* Replace cHash with the one provided in the query string (Snowflake fix)
 
 2009-04-19  Dmitry Dulepov  <dmitry@typo3.org>
 
